hphp/hack/test/typecheck/is_expression/tuple3.php.exp
File "tuple3.php", line 7, characters 7-8:
Invalid argument (Typing[4098])
  File "tuple3.php", line 3, characters 12-29:
  This tuple has 3 elements
  File "tuple3.php", line 6, characters 13-25:
  This one has 2 elements
